Configured languages and add searching by clicking button

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -50,3 +50,7 @@ nullDescription = Podany produkt nie posiada opisu!
 helmets = Kaski
 pads = Ochraniacze
 allShops = Wszystkie sklepy
+id = ID
+name = NAZWA
+price = CENA
+image = ZDJECIE
