--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -50,3 +50,7 @@ nullDescription = No description of this product!
 helmets = Helmets
 pads = Pads
 allShops = All shops
+id = ID
+name = NAME
+price = PRICE
+image = IMAGE
