Update front page

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -37,6 +37,8 @@ chains = LANCUCHY
 pegs = PEGI
 rims = OBRECZE
 cranks = KORBY
+gears = ZEBATKI
+heads = STERY
 comparisonPanel = Wlacz porownywarke
 warning = OSTRZEZENIE
 warningTimeoutInformation = Zbyt dlugi czas oczekiwania! Prosze sprobowac ponownie!
