--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -37,6 +37,8 @@ chains = CHAINS
 pegs = PEGS
 rims = RIMS
 cranks = CRANKS
+gears = GEARS
+heads = HEADS
 comparisonPanel = Open Comparison
 warning = WARNING
 warningTimeoutInformation = Timeout error! Please try again!
