Update Search Page

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -44,10 +44,10 @@ warning = OSTRZEZENIE
 warningTimeoutInformation = Zbyt dlugi czas oczekiwania! Prosze sprobowac ponownie!
 partNotFound = Czesc nie zostala znaleziona!
 accessories = Akcesoria
-discountLabel = Wprowadz znizke
+discountLabel = WPROWADZ ZNIZKE
 menuLabel = MENU
 tabsLabel = Panel
-partName = Nazwa czesci: 
+partName = Nazwa czesci:
 nullDescription = Podany produkt nie posiada opisu!
 helmets = Kaski
 pads = Ochraniacze
@@ -59,3 +59,6 @@ image = ZDJECIE
 profile = PROFIL
 calculator = KALKULATOR SZPRYCH
 contact = KONTAKT
+cartLabel = KOSZYK
+topGo = Powrot na gore
+shopName = Nazwa sklepu:
