--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -44,10 +44,10 @@ warning = WARNING
 warningTimeoutInformation = Timeout error! Please try again!
 partNotFound = Part can't be found!
 accessories = Accessories
-discountLabel = Enter your discount
+discountLabel = ENTER A DISCOUNT
 menuLabel = MENU
 tabsLabel = Panel
-partName = Name of part: 
+partName = Name of the part: 
 nullDescription = No description of this product!
 helmets = Helmets
 pads = Pads
@@ -59,3 +59,6 @@ image = IMAGE
 profile = PROFILE
 calculator = SPOKE CALCULATOR
 contact = CONTACT
+cartLabel = SHIPPING CART
+topGo = Go to top
+shopName = Name of the shop:
