Update method - applyDiscount()

--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -44,7 +44,7 @@ warning = WARNING
 warningTimeoutInformation = Timeout error! Please try again!
 partNotFound = Part can't be found!
 accessories = Accessories
-discountLabel = ENTER A DISCOUNT
+discountLabel = ENTER A DISCOUNT  
 menuLabel = MENU
 tabsLabel = Panel
 partName = Name of the part: 
@@ -62,3 +62,4 @@ contact = CONTACT
 cartLabel = SHIPPING CART
 topGo = Go to top
 shopName = Name of the shop:
+discountText = Discount
