Update appearence of the cart

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -2,20 +2,20 @@ userButton = Profil
 purchaseBasket = Koszyk
 settings = Ustawienia
 exit = Zamknij
-back = Powrot
+back = Powr\u00F3t
 basket = Koszyk
 addBasket = Do koszyka
-delete = USUN
-language = Jezyk
-compare = POROWNAJ
+delete = USU\u0143
+language = J\u0119zyk
+compare = POR\u00D3WNAJ
 erase = COFNIJ
 accept = ZAAKCEPTUJ
 search = WYSZUKAJ
-bColor = Kolor tla
-chooseColor = Zmien kolor tla
+bColor = Kolor t\u0142a
+chooseColor = Zmie\u0144 kolor t\u0142a
 defaultColorButton = Resetuj kolor t\u0142a
-compareButton = Porownaj
-mainPanel = Panel glowny
+compareButton = Por\u00F3wnaj
+mainPage = Strona g\u0142\u00F3wna
 shop = Sklepy:
 grips = GRIPY
 bars = KIEROWNICE
@@ -23,31 +23,31 @@ barends = BARENDY
 stems = MOSTKI
 frames = RAMY
 steers = STERY
-seats = SIODELKA
+seats = SIODE\u0141KA
 posts = SZTYCE
-pedals = PEDALY
+pedals = PEDA\u0141Y
 forks = WIDELCE
 tires = OPONY
 hubs = PIASTY
 hubguards = HUBGUARDY
 spokes = SZPRYCHY
 supports = SUPPORTY
-sprockets = ZEBATKI
-chains = LANCUCHY
+sprockets = Z\u0118BATKI
+chains = \u0141A\u0143CUCHY
 pegs = PEGI
-rims = OBRECZE
+rims = OBR\u0118CZE
 cranks = KORBY
-gears = ZEBATKI
+gears = Z\u0118BATKI
 heads = STERY
-comparisonPanel = Wlacz porownywarke
-warning = OSTRZEZENIE
-warningTimeoutInformation = Zbyt dlugi czas oczekiwania! Prosze sprobowac ponownie!
-partNotFound = Czesc nie zostala znaleziona!
+comparisonPanel = W\u0142acz porownywark\u0119
+warning = OSTRZE\u017BENIE
+warningTimeoutInformation = Zbyt d\u0142ugi czas oczekiwania! Prosz\u0119 spr\u00F3bowac ponownie!
+partNotFound = Cz\u0119\u015B\u0107 nie zosta\u0142a znaleziona!
 accessories = Akcesoria
-discountLabel = WPROWADZ ZNIZKE
+discountLabel = WPROWAD\u0179 ZNI\u017BK\u0118
 menuLabel = MENU
 tabsLabel = Panel
-partName = Nazwa czesci:
+partName = Nazwa cz\u0119\u015Bci:
 nullDescription = Podany produkt nie posiada opisu!
 helmets = Kaski
 pads = Ochraniacze
@@ -55,11 +55,17 @@ allShops = Wszystkie sklepy
 id = ID
 name = NAZWA
 price = CENA
-image = ZDJECIE
+image = ZDJ\u0118CIE
 profile = PROFIL
 calculator = KALKULATOR SZPRYCH
 contact = KONTAKT
 cartLabel = KOSZYK
-topGo = Powrot na gore
+topGo = Powrot na g\u00F3r\u0119
 shopName = Nazwa sklepu:
-discountText = Znizka
+discountText = Zni\u017Cka
+singlePrice = Cena jednostkowa: 
+totalPrice = Cena \u0142\u0105czna
+summary = Podsumowanie
+deleteButton = USU\u0143 WSZYSTKIE PRODUKTY
+noProducts = BRAK PRODUKT\u00D3W
+selectProducts = Znajd\u017a inny produkt
