--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -15,7 +15,7 @@ bColor = Background color
 chooseColor = Change background color
 defaultColorButton = Reset background color
 compareButton = Compare
-mainPanel = Main Panel
+mainPage = Main Page
 shop = Shops:
 grips = GRIPS
 bars = BARS
@@ -63,3 +63,9 @@ cartLabel = SHIPPING CART
 topGo = Go to top
 shopName = Name of the shop:
 discountText = Discount
+singlePrice = Unit price: 
+totalPrice = Total price
+summary = Summary
+deleteButton = DELETE ALL PRODUCTS
+noProducts = NO PRODUCTS
+selectProducts = Select another product
