Add buttons to the cart and update price informations

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -68,4 +68,5 @@ totalPrice = Cena \u0142\u0105czna
 summary = Podsumowanie
 deleteButton = USU\u0143 WSZYSTKIE PRODUKTY
 noProducts = BRAK PRODUKT\u00D3W
-selectProducts = Znajd\u017a inny produkt
+selectProducts = Znajd\u017a inne produkty
+finalPrice = Cena ko\u0144cowa
