--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -68,4 +68,5 @@ totalPrice = Total price
 summary = Summary
 deleteButton = DELETE ALL PRODUCTS
 noProducts = NO PRODUCTS
-selectProducts = Select another product
+selectProducts = Find another products
+finalPrice = Final price
