--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -70,3 +70,4 @@ deleteButton = USU\u0143 WSZYSTKIE PRODUKTY
 noProducts = BRAK PRODUKT\u00D3W
 selectProducts = Znajd\u017a inne produkty
 finalPrice = Cena ko\u0144cowa
+summaryAddButton = Kliknij aby doda\u0107
