--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -70,3 +70,4 @@ deleteButton = DELETE ALL PRODUCTS
 noProducts = NO PRODUCTS
 selectProducts = Find another products
 finalPrice = Final price
+summaryAddButton = Click to add
