Add discount functionality

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -71,3 +71,4 @@ noProducts = BRAK PRODUKT\u00D3W
 selectProducts = Znajd\u017a inne produkty
 finalPrice = Cena ko\u0144cowa
 summaryAddButton = Kliknij aby doda\u0107
+discountApplied = Aktualna zni\u017Cka : 
