Implement search page

--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -71,3 +71,4 @@ noProducts = NO PRODUCTS
 selectProducts = Find another products
 finalPrice = Final price
 summaryAddButton = Click to add
+shopNameTh= SHOP 
