--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -72,3 +72,4 @@ selectProducts = Znajd\u017a inne produkty
 finalPrice = Cena ko\u0144cowa
 summaryAddButton = Kliknij aby doda\u0107
 discountApplied = Aktualna zni\u017Cka : 
+shopNameTh= NAZWA SKLEPU
