Add elements to the language file

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -73,3 +73,4 @@ finalPrice = Cena ko\u0144cowa
 summaryAddButton = Kliknij aby doda\u0107
 discountApplied = Aktualna zni\u017Cka : 
 shopNameTh= NAZWA SKLEPU
+searchValue= Wyszukiwana fraza:
