--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -72,3 +72,4 @@ selectProducts = Find another products
 finalPrice = Final price
 summaryAddButton = Click to add
 shopNameTh= SHOP 
+searchValue = Search Value:
