Add filter by shopName

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -74,3 +74,5 @@ summaryAddButton = Kliknij aby doda\u0107
 discountApplied = Aktualna zni\u017Cka : 
 shopNameTh= NAZWA SKLEPU
 searchValue= Wyszukiwana fraza:
+filter=FILTRY
+applyButton = ZASTOSUJ
