--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -73,3 +73,5 @@ finalPrice = Final price
 summaryAddButton = Click to add
 shopNameTh= SHOP 
 searchValue = Search Value:
+filter=FILTERS
+applyButton = APPLY
