--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -76,3 +76,6 @@ shopNameTh= NAZWA SKLEPU
 searchValue= Wyszukiwana fraza:
 filter=FILTRY
 applyButton = ZASTOSUJ
+shops=SKLEPY
+minimalPrice= Wprowad\u017A najni\u017Csz\u0105 cen\u0119
+maxPrice = Wprowad\u017A najwy\u017sz\u0105 cen\u0119
