--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -75,3 +75,6 @@ shopNameTh= SHOP
 searchValue = Search Value:
 filter=FILTERS
 applyButton = APPLY
+shops=SHOPS
+minimalPrice= Enter the lowest price
+maxPrice = Enter the highest price
