Add elements to language file

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -60,7 +60,7 @@ profile = PROFIL
 calculator = KALKULATOR SZPRYCH
 contact = KONTAKT
 cartLabel = KOSZYK
-topGo = Powrot na g\u00F3r\u0119
+topGo = Powr\u00F3t na g\u00F3r\u0119
 shopName = Nazwa sklepu:
 discountText = Zni\u017Cka
 singlePrice = Cena jednostkowa: 
@@ -78,4 +78,4 @@ filter=FILTRY
 applyButton = ZASTOSUJ
 shops=SKLEPY
 minimalPrice= Wprowad\u017A najni\u017Csz\u0105 cen\u0119
-maxPrice = Wprowad\u017A najwy\u017sz\u0105 cen\u0119
+maxPrice= Wprowad\u017A najwy\u017Csz\u0105 cen\u0119
