Add filter: category

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -79,3 +79,5 @@ applyButton = ZASTOSUJ
 shops=SKLEPY
 minimalPrice= Wprowad\u017A najni\u017Csz\u0105 cen\u0119
 maxPrice= Wprowad\u017A najwy\u017Csz\u0105 cen\u0119
+category=KATEGORIA
+allCategory=Wszystkie kategorie
