--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -78,3 +78,5 @@ applyButton = APPLY
 shops=SHOPS
 minimalPrice= Enter the lowest price
 maxPrice = Enter the highest price
+category=CATEGORY
+allCategory=All categories
