Selected filters are shown on the page

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -81,3 +81,4 @@ minimalPrice= Wprowad\u017A najni\u017Csz\u0105 cen\u0119
 maxPrice= Wprowad\u017A najwy\u017Csz\u0105 cen\u0119
 category=KATEGORIA
 allCategory=Wszystkie kategorie
+search=Wyszukaj
