--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -80,3 +80,4 @@ minimalPrice= Enter the lowest price
 maxPrice = Enter the highest price
 category=CATEGORY
 allCategory=All categories
+search=Search
