Add creating url and change price to type BigDecimal

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -82,3 +82,5 @@ maxPrice= Wprowad\u017A najwy\u017Csz\u0105 cen\u0119
 category=KATEGORIA
 allCategory=Wszystkie kategorie
 search=Wyszukaj
+compare=POR\u00D3WNAJ
+comparision=POR\u00D3WNYWARKA
