--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -81,3 +81,5 @@ maxPrice = Enter the highest price
 category=CATEGORY
 allCategory=All categories
 search=Search
+compare=COMPARE
+comparision=COMPARATOR
