Add comparison availbility

--- a/src/main/resources/lang/res.properties
+++ b/src/main/resources/lang/res.properties
@@ -84,3 +84,5 @@ allCategory=Wszystkie kategorie
 search=Wyszukaj
 compare=POR\u00D3WNAJ
 comparision=POR\u00D3WNYWARKA
+productOne=PIERWSZY PRODUKT
+productTwo=DRUGI PRODUKT
