--- a/src/main/resources/lang/res_en.properties
+++ b/src/main/resources/lang/res_en.properties
@@ -83,3 +83,5 @@ allCategory=All categories
 search=Search
 compare=COMPARE
 comparision=COMPARATOR
+productOne=FIRST PRODUCT
+productTwo=SECOND PRODUCT
