Format description for products and add buttons to comparator page

--- a/src/main/resources/documentation/todo
+++ b/src/main/resources/documentation/todo
@@ -1,2 +1,11 @@
+....TO DO....
+
 - Refactor ShopResearcherService
-- Add formatter for description  
+- Format description to compare the same attributes
+- Creating pdf from cart
+- Changing datatype for prices
+- Adding products from different categories throws exception
+- Adding the same product throws exception
+
+....DONE....
+- Add formatter for description  - 06.04.2023
